# wildintel-tools

./: Dockerfile  README.md  babel.cfg  docker-compose.yml  entrypoint.sh  env.example  pyproject.toml
.github/workflows/: build-exe.yml  build-rolover-exe.yml  docker-build.yml  docker-publish.yml  docs.yml
docs/faq/: windows_exe.md  windows_uv.md
docs/source/: conf.py  index.rst
docs/source/user_guide/: configuration.rst  first_steps.rst  index.rst  installation.rst  introduction.rst
src/wildintel_tools/: epicollect.py  helpers.py  http_uploader.py  reports.py  resouceutils.py  trapper.py  trapper_package.py  trapper_package_secuencial.py  wildintel.py
src/wildintel_tools/locales/: messages.pot
src/wildintel_tools/locales/en_GB/LC_MESSAGES/: messages.po
src/wildintel_tools/locales/es_ES/LC_MESSAGES/: messages.po
src/wildintel_tools/ui/typer/: EpicollectUtils.py  TyperUtils.py  ZooUtils.py  default_settings.toml  i18n.py  logger.py  main.py  settings.py  wildintel.py  zooniverse.py
src/wildintel_tools/ui/typer/commands/: config.py  epicollect.py  helpers.py  logger.py  reports.py  wildintel.py  zooniverse.py
src/wildintel_tools/zooniverse/: Schemas.py  TrapperZooniverseConnector.py  ZooniverseClient.py
src/wildintel_tools/zooniverse/AnnotationsExtractor/: AnnotationsExtractor.py  Workflow17553AnnotationExtractor.py  Workflow29186AnnotationExtractor.py  Workflow29187AnnotationExtractor.py
src/wildintel_tools/zooniverse/AnnotationsVoter/: AnnotationsVoter.py  Workflow17553AnnotationsVoter.py  Workflow29186AnnotationsVoter.py
utils/: build_exe.py  docs.py  i18n.py  install_docker.ps1  install_docker_wsl1,ps1  install_docker_wsl1.ps1  install_python_uv.ps1  install_spice_virtio_sshd.ps1  install_wildintel_tools.ps1  sphinx.py
wildintel_tools/: reports.py  wildintel.py
wildintel_tools/locales/: messages.pot
wildintel_tools/ui/typer/: TyperUtils.py  default_settings.toml  i18n.py  logger.py  main.py  settings.py
wildintel_tools/ui/typer/commands/: config.py  logger.py  wildintel.py
wildintel_tools/utils/: i18n.py
