[project]
name = "wildintel-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.12",
    "natsort>=8.4.0",
    "pillow>=12.0.0",
    "typer>=0.20.0",
    "pyexiftool>=0.5.6",
    "rich>=14.2.0",
    "filetype>=1.2.0",
    "trapper-client",
]

[dependency-groups]
dev = [
    "babel>=2.17.0",
    "pytest>=8.4.2",
]

[project.scripts]
wildintel-tools = "wildintel_tools.ui.typer.main:app"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.sources]
trapper-client = { git = "https://github.com/ijfvianauhu/trapper-client.git", rev = "main" }
