[project]
name = "wildintel-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.12",
    "natsort>=8.4.0",
    "pillow>=12.0.0",
    "typer>=0.20.0",
    "pyexiftool>=0.5.6",
    "rich>=14.2.0",
    "filetype>=1.2.0",
    "trapper-client",
    "typer-config>=1.4.3",
    "pyepicollect>=5.1.1",
    "tenacity>=9.1.2",
    "pydantic[email]>=2.12.4",
    "docutils-stubs==0.0.22",
    "types-docutils==0.22.3.20251115",
    "aiofiles>=25.1.0",
    "httpx>=0.28.1",
    "blake3>=1.0.8",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "babel>=2.17.0",
    "pyinstaller>=6.17.0",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-rtd-theme>=3.0.2",
]

[project.scripts]
wildintel-tools = "wildintel_tools.ui.typer.main:app"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.ruff]
# Set the maximum line length to 79.
line-length = 120

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]

[tool.uv.sources]
trapper-client = { git = "https://github.com/ijfvianauhu/trapper-client.git", rev = "main" }
